fixes for jdk11 compilation.
apple LAF is now com.apple. fixed deprecated use of newInstance().
pruned some code that called unsupported java.awt.peer methods.